# Convolution

./: CMakeLists.txt
data/: blurredImage.txt  compare.txt  output.txt  sharpImage.txt
src/: Convolution.cpp  Convolution.h  DecodeMessage.cpp  DecodeMessage.h  EdgeDetector.cpp  EdgeDetector.h  EncodeMessage.cpp  EncodeMessage.h  ImageMatrix.cpp  ImageMatrix.h  ImageProcessor.cpp  ImageSharpening.cpp  ImageSharpening.h
